091104 cs  wb        Build method for WebGraph objects added.
091208 cs  wb        PostCreate methods for Channels added to set default number and representation.
091208 cs  wb        Default name for created objects in wtt fetched from name of previous sibling.
091209 cs  wb        ConnectAttribute method added to SevHist.
091218 cs  wb        Bugfix for next cix and next oix in ced.
091218 cs  wb        Bugfix in wb_vrepdb:child().
100111 cs  wb        Mysql classvolume databases.
100118 cs  plc       Toggle button in plc editor for feedback connections.
100120 cs  wb        Functionality to view configuration status added.
100121 cs  plc       Toolbar buttons in plc editor to create texts and documents and to redraw.
100417 cs  wb        Distribution to other users than pwrp.
100420 cs  wb        Custom build configuration object and generation of custom_build.sh file.
100520     plc       Bugfix in plc editor, channels wasn't viewed in subvolumes.
100617 cs  script    Wb script function GetAttribute didn't work for attribute objects.
100618 cs  wb        Crossreferences in LibHier not inserted into crossreferece list.  
100827 cs  wb        Alignment bugfix class array attributes.
101001 cs  adm       Projectlist, errormessage for '_' in project name which is not allowed.
101004 cs  wb        PlcPgm and Node, adopt and create methods added.
101005 cs  wb        RtBody size alignment fix for ClassDef and Attribute objects.
101005 cs  wb        Node build method, current node condition for build of config files removed.
101006 cs  wb        Dev method PostCreate, inheritance added.
101006 cs  wb        IO objects, PostCreate method to automatically insert ThreadObject.
101123 cs  wb        Lockfile added to directory and class volumes.
110202 cs  wb        Bugfix in object editor, Ctrl+DoubleClick didn't work on attrrefs.
110202 cs  wb        Plc compile, problem with compilation of component subwindow from plc editor fixed.