@@ -33,7 +33,7 @@ if [ -z $database ]; then
   return
 fi
 
-if [ "`eval grep Ubuntu /etc/*-release`" != "" ]; then
+if [ "`eval grep Ubuntu /etc/*-release 2>/dev/null`" != "" ]; then
   export LC_TIME="en_US.UTF-8"
 elif [ -e /etc/debian_version ]; then
   export LC_TIME="en_US"
