@@ -170,3 +170,4 @@
 101123 cs  wb        Lockfile added to directory and class volumes.
 110202 cs  wb        Bugfix in object editor, Ctrl+DoubleClick didn't work on attrrefs.
 110202 cs  wb        Plc compile, problem with compilation of component subwindow from plc editor fixed.
+110203 cs  wb        Plc link, problem with uppercase nodename for opt-file fixed.
